Mean and standard deviation

--- a/sheet01/CP_Sheet1_Ahlborn_Lotz.ipynb
+++ b/sheet01/CP_Sheet1_Ahlborn_Lotz.ipynb
@@ -20,15 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "final answer: pi=3.6\n",
-      "Deviation: pi_deviation = 0.19999999999999996\n"
+      "final answer: pi=3.1548000000000003\n",
+      "X=1, so the deviation is compute according to std:\n",
+      "pi_std = 0.0\n"
      ]
     }
    ],
@@ -46,27 +47,36 @@
     "        # Check if the points are inside the circle (r<=1)\n",
     "        R_inside = [r <= 1 for r in R]\n",
     "        # Compute the ratio of points inside the circle and thus pi for trial x\n",
-    "        pi_x = (4/P) * np.sum(R_inside)\n",
+    "        indicator_variable = 4*np.array(R_inside)\n",
+    "        pi_x = (1/P) * np.sum(indicator_variable)\n",
     "        # Add pi_x to list of all pis for all trials\n",
     "        pi_list[x] = pi_x\n",
     "    \n",
     "    # Compute final answer\n",
-    "    pi_final = (1/X)*np.sum(pi_list)\n",
+    "    pi_final = np.mean(pi_list)\n",
     "    print(f'final answer: pi={pi_final}')\n",
     "    \n",
     "    # Compute Deviation\n",
     "    if Deviation:\n",
     "        if X==1:\n",
-    "            print('error: deviation could not be computed because X=1')\n",
+    "            pi_std = np.std(pi_list)\n",
+    "            print(f'X=1, so the deviation is compute according to std:\\npi_std = {pi_std}')\n",
     "        else:\n",
     "            pi_deviation = (1/(X-1))*np.sqrt( (pi_x-pi_final)**2 )\n",
-    "            print(f'Deviation: pi_deviation = {pi_deviation}')\n",
+    "            print(f'X = {X}, the deviation is:\\npi_deviation = {pi_deviation}')\n",
     "       \n",
     "        \n",
     "    \n",
     "\n",
-    "get_pi(X=3, P=10, Deviation=True)"
+    "get_pi(X=1, P=10000, Deviation=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
