--- a/sheet01/CP_Sheet1_Ahlborn_Lotz.ipynb
+++ b/sheet01/CP_Sheet1_Ahlborn_Lotz.ipynb
@@ -2,11 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# Use LaTeX for rendering text\n",
+    "plt.rcParams.update({\n",
+    "    \"text.usetex\": True,\n",
+    "    \"font.family\": \"serif\",\n",
+    "    \"font.serif\": [\"Computer Modern Roman\"],\n",
+    "    \"font.size\": 12,              # Default font size\n",
+    "    \"axes.titlesize\": 14,          # Title font size\n",
+    "    \"axes.labelsize\": 12,          # Axes labels size\n",
+    "    \"legend.fontsize\": 10,         # Legend font size\n",
+    "    \"xtick.labelsize\": 10,         # X-axis tick label size\n",
+    "    \"ytick.labelsize\": 10,         # Y-axis tick label size\n",
+    "})\n",
+    "\n"
    ]
   },
   {
@@ -20,20 +35,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "final answer: pi=3.1548000000000003\n",
-      "X=1, so the deviation is compute according to std:\n",
-      "pi_std = 0.0\n"
+      "final answer: pi = 3.1352\n",
+      "Warning: deviation is not clearly defined for X=1\n",
+      "pi_deviation = 0.0\n"
      ]
     }
    ],
    "source": [
+    "def histogram(x, bins=100, hits_title='Computed pi_x values'):\n",
+    "    plt.hist(x, bins)\n",
+    "    plt.title(hits_title)\n",
+    "    plt.legend()\n",
+    "    plt.grid(alpha=0.3)\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "\n",
     "def get_pi(X:int,  # Number of trials\n",
     "           P:int,  # Number of pairs per trial\n",
     "           Deviation : bool=False,  # Wether to compute the deviation or not\n",
@@ -53,16 +77,18 @@
     "        pi_list[x] = pi_x\n",
     "    \n",
     "    # Compute final answer\n",
+    "    pi_list = np.array(pi_list)\n",
     "    pi_final = np.mean(pi_list)\n",
-    "    print(f'final answer: pi={pi_final}')\n",
+    "    print(f'final answer: pi = {pi_final}')\n",
     "    \n",
     "    # Compute Deviation\n",
     "    if Deviation:\n",
     "        if X==1:\n",
-    "            pi_std = np.std(pi_list)\n",
-    "            print(f'X=1, so the deviation is compute according to std:\\npi_std = {pi_std}')\n",
+    "            pi_deviation = np.std(pi_list)\n",
+    "            print(f'Warning: deviation is not clearly defined for X=1')\n",
+    "            print(f'pi_deviation = {pi_deviation}')\n",
     "        else:\n",
-    "            pi_deviation = (1/(X-1))*np.sqrt( (pi_x-pi_final)**2 )\n",
+    "            pi_deviation = np.sqrt( (1/(X-1))*np.sum((pi_list-pi_final)**2 ))\n",
     "            print(f'X = {X}, the deviation is:\\npi_deviation = {pi_deviation}')\n",
     "       \n",
     "        \n",
